force-app/main/default/objects/Job_Application__c/fields/AI_Filter_Decision__c.field-meta.xml
<CustomField>
    <fullName>AI_Filter_Decision__c</fullName>
    <label>AI Filter Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>