force-app/main/default/objects/Job_Application__c/fields/AI_Scored_At__c.field-meta.xml
<CustomField>
    <fullName>AI_Scored_At__c</fullName>
    <label>AI Scored At</label>
    <type>DateTime</type>
</CustomField>