force-app/main/default/objects/Job_Application__c/fields/Application_Key__c.field-meta.xml
<CustomField>
    <fullName>Application_Key__c</fullName>
    <label>Application Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>