force-app/main/default/objects/Job_Application__c/fields/Current_Interview_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Interview_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Interview Stage</label>
    <referenceTo>Interview_Stage__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>