force-app/main/default/objects/Job_Application__c/fields/CV_File_Id__c.field-meta.xml
<CustomField>
    <fullName>CV_File_Id__c</fullName>
    <label>CV File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>