force-app/main/default/objects/Job_Application__c/fields/CV_Link__c.field-meta.xml
<CustomField>
    <fullName>CV_Link__c</fullName>
    <label>CV Link</label>
    <type>Url</type>
</CustomField>