force-app/main/default/objects/Job_Application__c/fields/Education_Score__c.field-meta.xml
<CustomField>
    <fullName>Education_Score__c</fullName>
    <label>Education Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>