force-app/main/default/objects/Job_Application__c/fields/Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>Experience_Score__c</fullName>
    <label>Experience Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>