force-app/main/default/objects/Job_Application__c/fields/Extracted_Education__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Education__c</fullName>
    <label>Extracted Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>