force-app/main/default/objects/Job_Application__c/fields/Extracted_Experience__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Experience__c</fullName>
    <label>Extracted Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>