force-app/main/default/objects/Job_Application__c/fields/Extracted_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Keywords__c</fullName>
    <label>Extracted Keywords</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>