force-app/main/default/objects/Job_Application__c/fields/Extracted_Skills__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Skills__c</fullName>
    <label>Extracted Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>