force-app/main/default/objects/Job_Application__c/fields/Filter_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Filter_Rejection_Reason__c</fullName>
    <label>Filter Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>