force-app/main/default/objects/Job_Application__c/fields/Filter_Reviewed_At__c.field-meta.xml
<CustomField>
    <fullName>Filter_Reviewed_At__c</fullName>
    <label>Filter Reviewed At</label>
    <type>DateTime</type>
</CustomField>