force-app/main/default/objects/Job_Application__c/fields/Filter_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Filter_Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Job Applications (Filter Reviewed By)</relationshipLabel>
    <relationshipName>Job_Applications_Filter_Reviewed</relationshipName>
    <type>Lookup</type>
</CustomField>