force-app/main/default/objects/Job_Application__c/fields/Interview_Score__c.field-meta.xml
<CustomField>
    <fullName>Interview_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interview Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>