force-app/main/default/objects/Job_Application__c/fields/Keywords_Score__c.field-meta.xml
<CustomField>
    <fullName>Keywords_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Keywords Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>