force-app/main/default/objects/Job_Application__c/fields/Motivation_Letter__c.field-meta.xml
<CustomField>
    <fullName>Motivation_Letter__c</fullName>
    <label>Motivation Letter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>