force-app/main/default/objects/Job_Application__c/fields/Motivation_Letter_Link__c.field-meta.xml
<CustomField>
    <fullName>Motivation_Letter_Link__c</fullName>
    <label>Motivation Letter Link</label>
    <type>Url</type>
</CustomField>