force-app/main/default/objects/Job_Application__c/fields/Parsed_At__c.field-meta.xml
<CustomField>
    <fullName>Parsed_At__c</fullName>
    <label>Parsed At</label>
    <type>DateTime</type>
</CustomField>