force-app/main/default/objects/Job_Application__c/fields/Parser_Version__c.field-meta.xml
<CustomField>
    <fullName>Parser_Version__c</fullName>
    <label>Parser Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>