force-app/main/default/objects/Job_Application__c/fields/Passed_Hard_Filter__c.field-meta.xml
<CustomField>
    <fullName>Passed_Hard_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed Hard Filter</label>
    <type>Checkbox</type>
</CustomField>