force-app/main/default/objects/Job_Application__c/fields/Previous_Application__c.field-meta.xml
<CustomField>
    <fullName>Previous_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Job Applications (Previous)</relationshipLabel>
    <relationshipName>Job_Applications_Previous</relationshipName>
    <type>Lookup</type>
</CustomField>