force-app/main/default/objects/Job_Application__c/fields/Skills_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Skills_Match_Score__c</fullName>
    <label>Skills Match Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>