force-app/main/default/objects/Job_Application__c/fields/Waiting_List_Position__c.field-meta.xml
<CustomField>
    <fullName>Waiting_List_Position__c</fullName>
    <label>Waiting List Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>